--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "English Dictionary",
-    "slug": "dictionary-app-stage-1",
+    "name": "Dictionary App",
+    "slug": "dictionary-app-stage-2",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
